--- a/config.ini
+++ b/config.ini
@@ -1,20 +1,12 @@
 [WALLET]
-
-SECRET_KEY=private_wallet_key
-WSS_NODE=wss_node
-
-
+SECRET_KEY=
+WSS_NODE=https://rpc.coredao.org
 [CONTRACTS]
-
-INPUT=BNB
-OUTPUT=BUSD
-
-
+INPUT=CORE
+OUTPUT=0x000000000E1D682Cc39ABe9B32285fdEa1255374
 [TRANSACTION]
 
-GAS_LIMIT=500000
-GAS_PRICE=5
-
-AMOUNT_IN=0.0033
-
+GAS_LIMIT=5000000
+GAS_PRICE=12
+AMOUNT_IN=0.00033
 BUY_SLIPPAGE=10
