--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "chalk": "^4.1.2",
-    "ethers": "^5.5.1",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "ethers": "5.4.1"
   },
   "devDependencies": {},
   "scripts": {
