--- a/config.ini
+++ b/config.ini
@@ -5,13 +5,17 @@ RPC_NODE=https://core.positron.network
 [CONTRACTS]
 INPUT=CORE
 WETH=0x191E94fa59739e188dcE837F7f6978d84727AD01
-WETH2=0x40375C92d9FAf44d2f9db9Bd9ba41a3317a2404f
-OUTPUT=0xe191a4d47A6be111C75139757CDDBb61BEEd88FB
+
+DEX=SHADOWSWAP
+PAIR=0xddBa66C1eBA873e26Ac0215Ca44892a07d83aDF5
 ROUTER=0xCCED48E6fe655E5F28e8C4e56514276ba8b34C09
 FACTORY=0x326Ee96748E7DcC04BE1Ef8f4E4F6bdd54048932
+
+OUTPUT=0xe191a4d47A6be111C75139757CDDBb61BEEd88FB
 EXPLORER=https://scan.coredao.org
+
 [TRANSACTION]
 GAS_LIMIT=5000000
-GAS_PRICE=125
-AMOUNT_IN=0.01
-BUY_SLIPPAGE=1
+GAS_PRICE=50
+AMOUNT_IN=0.001
+BUY_SLIPPAGE=12
